[package]
name = "book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
runtime-format = "0.1.3"
serde = { version="1.0.201", features=["derive"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
snafu = "0.8.2"
time = {version="0.3.36", features=["serde", "serde-well-known"] }
