[package]
name = "book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
log = "0.4.21"
regex = "1.10.4"
serde = { version="1.0.201", features=["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
